[gd_scene load_steps=3 format=2]

[ext_resource path="res://sprites/backgrounds/cockpit.png" type="Texture" id=1]
[ext_resource path="res://objects/Cockpit.gd" type="Script" id=2]

[node name="Cockpit" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -320.0
margin_bottom = -180.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="Button_Energy" type="TextureButton" parent="."]
margin_left = 63.0
margin_top = 57.0
margin_right = 112.0
margin_bottom = 126.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Radar" type="TextureButton" parent="."]
margin_left = 119.0
margin_top = 48.0
margin_right = 202.0
margin_bottom = 113.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Radio" type="TextureButton" parent="."]
margin_left = 207.326
margin_top = 57.8909
margin_right = 256.326
margin_bottom = 126.891
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button_Energy" to="." method="_on_Button_Energy_pressed"]
[connection signal="pressed" from="Button_Radar" to="." method="_on_Button_Radar_pressed"]
[connection signal="pressed" from="Button_Radio" to="." method="_on_Button_Radio_pressed"]
